--- a/config/default/prepare_gnps.yaml
+++ b/config/default/prepare_gnps.yaml
@@ -1,12 +1,23 @@
-#' The path of the output file. STRING
-output: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_gnps_pretreated.tsv.gz
+#' Files.
+files:
 
-#' The gnps job ID. STRING
-gnps: 96fa7c88200e4a03bee4644e581e3fb0
+  #' Annotation files.
+  annotations:
 
-#' The name of the workflow used within GNPS. 
-#' Currently 'fbmn' or 'classical' supported. STRING
-workflow: fbmn
+    #' List of treated annotations. STRING
+    treated:
+      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_gnps_treated.tsv.gz
 
-#' OPTIONAL. If exists. The nap job ID. STRING
-nap: ~
+
+#' GNPS related parameters.
+gnps: 
+  
+  #' GNPS job ID. STRING
+  id: 96fa7c88200e4a03bee4644e581e3fb0
+  
+  #' Workflow used within GNPS.
+  #' Currently "fbmn" or "classical" supported. STRING
+  workflow: fbmn
+  
+  #' OPTIONAL. If exists. NAP job ID. STRING
+  nap: ~
