--- a/config/default/fake_features_components.yaml
+++ b/config/default/fake_features_components.yaml
@@ -1,17 +1,36 @@
-#' The path of the input file. STRING
-input: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_pretreated.tsv.gz
+#' Files.
+files:
 
-#' The path of the file containing the feature table. STRING
-features: data/interim/annotations/example_feature_table.tsv.gz
+  #' Annotation files.
+  annotations:
 
-#' The path of the output file. STRING
-output: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_faked_filled.tsv.gz
+    #' List of pretreated annotations. STRING
+    pretreated:
+      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_pretreated.tsv.gz
+    
+    #' List of filled annotations. STRING
+    filled:
+      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_faked_filled.tsv.gz
+    
+  #' Features files.
+  features: 
 
-#' The MS mode used. Must be "pos" or "neg". STRING
-mode: pos
+    #' Raw features file. STRING
+    raw: data/interim/features/example_feature_table.tsv.gz
 
-#' The name of the column containing the "retention time" in the input file. STRING
-rt_name: rt
 
-#' The name of the column containing the "precursor m/z" in the input file. STRING
-precursor_name: mz
+#' MS related parameters.
+ms:
+
+  #' Polarity used. Must be "pos" or "neg". STRING
+  polarity: pos
+
+
+#' Names of the different variables in the input files.
+names:
+
+  #' Name of "precursor m/z" variable in the input. STRING
+  precursor: mz
+
+  #' Name of "retention time" variable in the input. STRING
+  rt: rt
