--- a/config/default/prepare_closed.yaml
+++ b/config/default/prepare_closed.yaml
@@ -1,5 +1,18 @@
-#' The path of the input file. STRING
-input: ../lotus-processor/data/processed/230106_closed_metadata.csv.gz
+#' Files.
+files:
 
-#' The path of the output file. STRING
-output: data/interim/libraries/closed_prepared.tsv.gz
+  #' Libraries files.
+  libraries:
+
+    #' Structure organism pairs libraries.
+    sop:
+
+      #' Raw structure organism pairs libraries.
+      raw:
+
+        #' Closed structure organism pairs library. STRING
+        closed: ../lotus-processor/data/processed/230106_closed_metadata.csv.gz
+
+      #' List of prepared structure organism pairs libraries. STRING
+      processed: 
+        - data/interim/libraries/closed_prepared.tsv.gz
