--- a/config/default/prepare_edges.yaml
+++ b/config/default/prepare_edges.yaml
@@ -1,18 +1,46 @@
-#' The name of the tool used to generate edges. 
-#' Currently "gnps" or "manual" supported. STRING
-tool: gnps
+#' Files.
+files:
 
-#' The gnps job ID. STRING
-gnps: 96fa7c88200e4a03bee4644e581e3fb0
+  #' Networks files.
+  networks:
 
-#' The path of the input file. STRING
-input: data/source/example_edges_manual.csv
+    #' Spectral networks files.
+    spectral:
 
-#' The path of the output file. STRING
-output: data/interim/edges/96fa7c88200e4a03bee4644e581e3fb0_edges.tsv.gz
+      #' Edges files.
+      edges:
 
-#' The name of the column containing the "source IDs". STRING
-source_name: CLUSTERID1
+        #' Raw edges file. STRING
+        raw: data/source/example_edges_manual.csv
 
-#' The name of the column containing the "target IDs". STRING
-target_name: CLUSTERID2
+        #' Prepared edges file. STRING
+        processed: data/interim/edges/96fa7c88200e4a03bee4644e581e3fb0_edges.tsv.gz
+
+#' GNPS related parameters.
+gnps: 
+  
+  #' GNPS job ID. STRING
+  id: 96fa7c88200e4a03bee4644e581e3fb0
+
+#' Names of the different variables in the input files.
+names:
+
+  #' Name of "source IDs" variable in the input. STRING
+  source: CLUSTERID1
+
+  #' Name of "target IDs" variable in the input. STRING
+  target: CLUSTERID2
+
+
+#' Tools used for each step.
+tools:
+
+  #' Networks related parameters.
+  networks:
+
+    #' Spectral networks related parameters.
+    spectral:
+
+      #' Tool used to generate edges.
+      #' Currently "gnps" or "manual" supported. STRING
+      edges: gnps
