--- a/config/default/prepare_spectral_matches.yaml
+++ b/config/default/prepare_spectral_matches.yaml
@@ -1,5 +1,16 @@
-#' The path of the input file. STRING
-input: data/interim/annotations/example_isdb.tsv.gz
+#' Files.
+files:
 
-#' The path of the output file. STRING
-output: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_pretreated.tsv.gz
+  #' Annotation files.
+  annotations:
+
+    #' Raw annotation files.
+    raw:
+
+      #' List of spectral matching results. STRING
+      spectral:
+        - data/interim/annotations/example_isdb.tsv.gz
+
+    #' List of pretreated annotations. STRING
+    pretreated:
+      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_pretreated.tsv.gz
