--- a/config/default/fake_features_components.yaml
+++ b/config/default/fake_features_components.yaml
@@ -6,11 +6,13 @@ files:
 
     #' List of pretreated annotations. STRING
     pretreated:
+      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_gnps_pretreated.tsv.gz
       - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_pretreated.tsv.gz
+      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_sirius_pretreated.tsv.gz
+
     
-    #' List of filled annotations. STRING
-    filled:
-      - data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_isdb_faked_filled.tsv.gz
+    #' Filled annotations file. STRING
+    filled: data/interim/annotations/96fa7c88200e4a03bee4644e581e3fb0_faked_filled.tsv.gz
     
   #' Features files.
   features: 
