--- a/NAMESPACE
+++ b/NAMESPACE
@@ -135,6 +135,7 @@ importFrom(dplyr,ungroup)
 importFrom(dplyr,vars)
 importFrom(jsonlite,fromJSON)
 importFrom(purrr,list_flatten)
+importFrom(purrr,map)
 importFrom(purrr,map_df)
 importFrom(readr,read_csv)
 importFrom(readr,read_delim)
