--- a/config/default/params.yaml
+++ b/config/default/params.yaml
@@ -67,6 +67,9 @@ annotations:
 
 #' Files.
 files:
+  
+  #' Pattern to identify the files. STRING
+  pattern: example
 
   #' Annotation files.
   annotations:
