--- a/config/default/params.yaml
+++ b/config/default/params.yaml
@@ -180,7 +180,7 @@ files:
   spectral:
 
     #' Raw spectral file. STRING
-    raw: data/source/example.mgf
+    raw: data/source/examples/example.mgf
 
 
 #' GNPS related parameters.
