--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -65,9 +65,9 @@ Collate:
     'form_adducts_neg.R'
     'form_adducts_pos.R'
     'get_benchmark.R'
-    'get_example_feature_table.R'
-    'get_example_mgf.R'
+    'get_example_features.R'
     'get_example_sirius.R'
+    'get_example_spectra.R'
     'get_last_version_from_zenodo.R'
     'get_params.R'
     'harmonize_spectra.R'
