--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,9 +22,9 @@ export(fake_no_rt)
 export(form_adducts_neg)
 export(form_adducts_pos)
 export(get_benchmark)
-export(get_example_feature_table)
-export(get_example_mgf)
+export(get_example_features)
 export(get_example_sirius)
+export(get_example_spectra)
 export(get_last_version_from_zenodo)
 export(get_params)
 export(harmonize_spectra)
