--- a/config/default/prepare_library.yaml
+++ b/config/default/prepare_library.yaml
@@ -7,6 +7,10 @@ files:
     #' Structure organism pairs libraries.
     sop:
 
+      #' List of prepared structure organism pairs libraries. STRING
+      processed: 
+        - data/interim/libraries/lotus_prepared.tsv.gz
+
       #' Merged structure organism pairs library. STRING
       merged: data/interim/libraries/library.tsv.gz
 
